Bug 270462: [toString] toString wizard generates wrong code